[gd_scene load_steps=28 format=3 uid="uid://d1dwu0n16uhxt"]

[ext_resource type="Script" uid="uid://b8mgwjyhy08u2" path="res://Scripts/Main.gd" id="1_4kpch"]
[ext_resource type="Texture2D" uid="uid://d0i20yquvhbea" path="res://assets/kenney_ui-pack-space-expansion/PNG/Grey/Double/bar_round_gloss_large_l.png" id="2_jw32o"]
[ext_resource type="PackedScene" uid="uid://ddbd77whg8g7p" path="res://Scenes/GenericEnemies.tscn" id="2_jyqft"]
[ext_resource type="Texture2D" uid="uid://pmg8bvufav46" path="res://assets/kenney_ui-pack-space-expansion/PNG/Grey/Double/bar_round_gloss_large_m.png" id="3_50glp"]
[ext_resource type="Script" uid="uid://0h4v6vvfa257" path="res://Scripts/buy_bar.gd" id="3_frkhe"]
[ext_resource type="Texture2D" uid="uid://dwssluee0w85c" path="res://assets/kenney_ui-pack-space-expansion/PNG/Grey/Double/bar_round_gloss_large_r.png" id="4_vy5pj"]
[ext_resource type="Texture2D" uid="uid://cpwy88wnx7hd4" path="res://assets/kenney_mini-arcade/Previews/arcade-machine.png" id="5_bmxlf"]
[ext_resource type="Theme" uid="uid://burs0ps80gsj4" path="res://UI/UI_theme.tres" id="5_vy5pj"]
[ext_resource type="Texture2D" uid="uid://cr1bfp47psf1j" path="res://assets/kenney_mini-arcade/Previews/air-hockey.png" id="6_4kpch"]
[ext_resource type="Texture2D" uid="uid://c64182xqvd60s" path="res://assets/kenney_cursor-pixel-pack/Tiles/tile_0189.png" id="6_bmxlf"]
[ext_resource type="Texture2D" uid="uid://5uy4r84r1ddk" path="res://assets/kenney_1-bit-input-prompts-pixel-16/Tiles (White)/tile_0327.png" id="7_bmxlf"]
[ext_resource type="Texture2D" uid="uid://bd60oxjejtqfl" path="res://assets/kenney_mini-arcade/Previews/basketball-game.png" id="7_grg3l"]
[ext_resource type="Script" uid="uid://cql5wssue6c8q" path="res://Scripts/air_hockey_button.gd" id="8_grg3l"]
[ext_resource type="Script" uid="uid://qhuy4h4gmqxf" path="res://Scripts/arcade_button.gd" id="9_c4ay3"]
[ext_resource type="Texture2D" uid="uid://57udx3qquuv6" path="res://assets/kenney_mini-arcade/Previews/dance-machine.png" id="10_3tgeq"]
[ext_resource type="Script" uid="uid://doh31hs5q7cy6" path="res://Scripts/ddr_button.gd" id="11_c4ay3"]
[ext_resource type="Script" uid="uid://bojleugdts2aj" path="res://Scripts/basketball_button.gd" id="13_aht7i"]
[ext_resource type="Script" uid="uid://bdn7kvjdylf08" path="res://Scripts/Souls.gd" id="13_h1m7h"]
[ext_resource type="Script" uid="uid://cdbk7xuq5qxp7" path="res://Scripts/score_updater.gd" id="14_1p5hy"]
[ext_resource type="Texture2D" uid="uid://b0esk27fyso2b" path="res://assets/kenney_mini-arcade/Previews/pinball.png" id="16_4n42c"]
[ext_resource type="Script" uid="uid://brltjte5kv2fc" path="res://Scripts/pinball_button.gd" id="17_c5snn"]
[ext_resource type="Texture2D" uid="uid://k5l0sxjrgx76" path="res://assets/kenney_mini-arcade/Previews/vending-machine.png" id="18_xvtyr"]
[ext_resource type="Script" uid="uid://bpbwqadutusbk" path="res://Scripts/vending_machine_button.gd" id="19_u7mjy"]
[ext_resource type="Script" uid="uid://nox86twqpnv8" path="res://Scripts/time_to_pay.gd" id="21_3tgeq"]
[ext_resource type="PackedScene" uid="uid://bwi84ll7heje6" path="res://Scenes/map.tscn" id="25_c4ay3"]

[sub_resource type="Curve3D" id="Curve3D_hwpts"]
_data = {
"points": PackedVector3Array(0, 0, 0, 0, 0, 0, -10.0905, 0.603353, -0.162745, 0, 0, 0, 0, 0, 0, -6.06474, 0.636113, -0.0928178, 0, 0, 0, 0, 0, 0, -6.06845, 0.652727, 2.80804, 0, 0, 0, 0, 0, 0, 4.95718, 0.677958, 2.89152, 0, 0, 0, 0, 0, 0, 4.98388, 0.730613, -0.171016, 0, 0, 0, 0, 0, 0, 10.2713, 0.769048, -0.188705),
"tilts": PackedFloat32Array(0, 0, 0, 0, 0, 0)
}
point_count = 6

[sub_resource type="Curve3D" id="Curve3D_c4ay3"]

[node name="Main2" type="Node3D"]
script = ExtResource("1_4kpch")
mob_scene = ExtResource("2_jyqft")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.618175, 0.78604, 0, -0.78604, 0.618175, 0, 8.36385, 6.28376)
projection = 1
fov = 73.6312
size = 10.91
near = 0.001
far = 200.0

[node name="Control" type="Control" parent="Camera3D"]
layout_mode = 3
anchor_left = 0.004
anchor_top = 0.796
anchor_right = 0.004
anchor_bottom = 0.796
offset_left = 0.392
offset_top = 0.191956
offset_right = 1147.39
offset_bottom = 127.192

[node name="ColorRect" type="ColorRect" parent="Camera3D/Control"]
layout_mode = 0
offset_left = -5.0
offset_right = 1149.0
offset_bottom = 136.0
color = Color(0.329158, 0.329158, 0.329158, 1)

[node name="DeleteButton" type="Button" parent="Camera3D/Control/ColorRect"]
visible = false
layout_mode = 0
offset_left = 959.0
offset_top = 35.0001
offset_right = 1100.0
offset_bottom = 99.0001
text = "Delete"

[node name="buy_bar" type="Control" parent="Camera3D/Control"]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("3_frkhe")

[node name="HBoxContainer2" type="HBoxContainer" parent="Camera3D/Control/buy_bar"]
layout_mode = 2
offset_left = -1.0
offset_top = 2.41754
offset_right = 1147.0
offset_bottom = 128.582
size_flags_stretch_ratio = 0.65
theme_override_constants/separation = 0
alignment = 1

[node name="endr" type="TextureRect" parent="Camera3D/Control/buy_bar/HBoxContainer2"]
layout_mode = 2
texture = ExtResource("2_jw32o")
expand_mode = 3

[node name="center" type="TextureRect" parent="Camera3D/Control/buy_bar/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 9.17
localize_numeral_system = false
texture = ExtResource("3_50glp")
expand_mode = 2

[node name="endl" type="TextureRect" parent="Camera3D/Control/buy_bar/HBoxContainer2"]
layout_mode = 2
texture = ExtResource("4_vy5pj")
expand_mode = 3

[node name="ScrollContainer" type="ScrollContainer" parent="Camera3D/Control/buy_bar"]
layout_mode = 2
offset_left = 45.0
offset_top = 32.0
offset_right = 1095.0
offset_bottom = 96.0
mouse_filter = 0
mouse_default_cursor_shape = 2
vertical_scroll_mode = 0

[node name="HBoxContainer" type="HBoxContainer" parent="Camera3D/Control/buy_bar/ScrollContainer"]
layout_mode = 2

[node name="ArcadeButton" type="TextureButton" parent="Camera3D/Control/buy_bar/ScrollContainer/HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("5_bmxlf")
script = ExtResource("9_c4ay3")

[node name="Panel" type="Label" parent="Camera3D/Control/buy_bar/ScrollContainer/HBoxContainer/ArcadeButton"]
visible = false
layout_mode = 0
offset_left = 21.0
offset_top = 17.0001
offset_right = 42.0
offset_bottom = 40.0001
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
text = "10"

[node name="AirHockeyButton" type="TextureButton" parent="Camera3D/Control/buy_bar/ScrollContainer/HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("6_4kpch")
script = ExtResource("8_grg3l")

[node name="Panel" type="Label" parent="Camera3D/Control/buy_bar/ScrollContainer/HBoxContainer/AirHockeyButton"]
visible = false
layout_mode = 0
offset_left = 21.0
offset_top = 17.0001
offset_right = 42.0
offset_bottom = 40.0001
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
text = "10"

[node name="DDRButton" type="TextureButton" parent="Camera3D/Control/buy_bar/ScrollContainer/HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("10_3tgeq")
script = ExtResource("11_c4ay3")

[node name="Panel" type="Label" parent="Camera3D/Control/buy_bar/ScrollContainer/HBoxContainer/DDRButton"]
visible = false
layout_mode = 0
offset_left = 21.0
offset_top = 17.0001
offset_right = 42.0
offset_bottom = 40.0001
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
text = "10"

[node name="BasketballButton" type="TextureButton" parent="Camera3D/Control/buy_bar/ScrollContainer/HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("7_grg3l")
script = ExtResource("13_aht7i")

[node name="Panel" type="Label" parent="Camera3D/Control/buy_bar/ScrollContainer/HBoxContainer/BasketballButton"]
visible = false
layout_mode = 0
offset_left = 21.0
offset_top = 17.0001
offset_right = 42.0
offset_bottom = 40.0001
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
text = "10"

[node name="PinballButton" type="TextureButton" parent="Camera3D/Control/buy_bar/ScrollContainer/HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("16_4n42c")
script = ExtResource("17_c5snn")

[node name="Panel" type="Label" parent="Camera3D/Control/buy_bar/ScrollContainer/HBoxContainer/PinballButton"]
visible = false
layout_mode = 0
offset_left = 21.0
offset_top = 17.0001
offset_right = 42.0
offset_bottom = 40.0001
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
text = "10"

[node name="VendingMachineButton" type="TextureButton" parent="Camera3D/Control/buy_bar/ScrollContainer/HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("18_xvtyr")
script = ExtResource("19_u7mjy")

[node name="Panel" type="Label" parent="Camera3D/Control/buy_bar/ScrollContainer/HBoxContainer/VendingMachineButton"]
visible = false
layout_mode = 0
offset_left = 21.0
offset_top = 17.0001
offset_right = 42.0
offset_bottom = 40.0001
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
text = "10"

[node name="HBoxContainer" type="HBoxContainer" parent="Camera3D/Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.019
anchor_top = -3.654
anchor_right = 0.019
anchor_bottom = -3.654
offset_left = 0.207035
offset_top = 0.0582581
offset_right = 87.207
offset_bottom = 25.0583
theme = ExtResource("5_vy5pj")
theme_override_constants/separation = 5

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="Camera3D/Control/HBoxContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="Camera3D/Control/HBoxContainer/AspectRatioContainer"]
layout_mode = 2
texture = ExtResource("6_bmxlf")

[node name="Money" type="RichTextLabel" parent="Camera3D/Control/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("5_vy5pj")
vertical_alignment = 1
script = ExtResource("13_h1m7h")

[node name="HBoxContainer3" type="HBoxContainer" parent="Camera3D/Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.878
anchor_top = -3.724
anchor_right = 0.878
anchor_bottom = -3.724
offset_left = -0.0643311
offset_top = -0.0517883
offset_right = 142.936
offset_bottom = 37.9482
theme = ExtResource("5_vy5pj")
theme_override_constants/separation = 5

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="Camera3D/Control/HBoxContainer3"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="Camera3D/Control/HBoxContainer3/AspectRatioContainer"]
layout_mode = 2
texture = ExtResource("7_bmxlf")

[node name="Score" type="RichTextLabel" parent="Camera3D/Control/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("5_vy5pj")
vertical_alignment = 1
script = ExtResource("14_1p5hy")

[node name="HBoxContainer4" type="HBoxContainer" parent="Camera3D/Control"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.84
anchor_top = -3.976
anchor_right = 0.84
anchor_bottom = -3.976
offset_left = -941.478
offset_top = 68.9522
offset_right = -762.478
offset_bottom = 106.952
theme = ExtResource("5_vy5pj")
theme_override_constants/separation = 5

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="Camera3D/Control/HBoxContainer4"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="Camera3D/Control/HBoxContainer4/AspectRatioContainer"]
layout_mode = 2
texture = ExtResource("7_bmxlf")

[node name="timer" type="RichTextLabel" parent="Camera3D/Control/HBoxContainer4"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("5_vy5pj")
vertical_alignment = 1
script = ExtResource("21_3tgeq")

[node name="RayCast3D" type="RayCast3D" parent="Camera3D"]
debug_shape_custom_color = Color(0.819608, 0, 0, 1)

[node name="OmniLight3D" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.69097, 12.6923, 8.39325)
light_energy = 16.0
light_size = 1.0
omni_range = 74.225

[node name="MobTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[node name="SpawnPath" type="Path3D" parent="."]
curve = SubResource("Curve3D_hwpts")

[node name="Node3D" parent="." instance=ExtResource("25_c4ay3")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.53215, 0, -4.67908)

[node name="ArcadeUnits" type="Node3D" parent="."]

[node name="Path3D" type="Path3D" parent="."]
curve = SubResource("Curve3D_c4ay3")

[connection signal="make_menu_bar_invisible" from="." to="Camera3D/Control/buy_bar" method="_on_main_make_menu_bar_invisible"]
[connection signal="make_menu_bar_visible" from="." to="Camera3D/Control/buy_bar" method="_on_main_make_menu_bar_visible"]
[connection signal="score_changed" from="." to="Camera3D/Control/HBoxContainer3/Score" method="_on_main_score_changed"]
[connection signal="souls_changed" from="." to="Camera3D/Control/HBoxContainer/Money" method="_on_main_souls_changed"]
[connection signal="pressed" from="Camera3D/Control/ColorRect/DeleteButton" to="." method="_on_delete_button_pressed"]
[connection signal="mouse_entered" from="Camera3D/Control/buy_bar/ScrollContainer/HBoxContainer/ArcadeButton" to="Camera3D/Control/buy_bar/ScrollContainer/HBoxContainer/ArcadeButton" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Camera3D/Control/buy_bar/ScrollContainer/HBoxContainer/ArcadeButton" to="Camera3D/Control/buy_bar/ScrollContainer/HBoxContainer/ArcadeButton" method="_on_mouse_exited"]
[connection signal="pressed" from="Camera3D/Control/buy_bar/ScrollContainer/HBoxContainer/ArcadeButton" to="." method="_on_arcade_button_pressed"]
[connection signal="mouse_entered" from="Camera3D/Control/buy_bar/ScrollContainer/HBoxContainer/AirHockeyButton" to="Camera3D/Control/buy_bar/ScrollContainer/HBoxContainer/AirHockeyButton" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Camera3D/Control/buy_bar/ScrollContainer/HBoxContainer/AirHockeyButton" to="Camera3D/Control/buy_bar/ScrollContainer/HBoxContainer/AirHockeyButton" method="_on_mouse_exited"]
[connection signal="pressed" from="Camera3D/Control/buy_bar/ScrollContainer/HBoxContainer/AirHockeyButton" to="." method="_on_air_hockey_button_pressed"]
[connection signal="mouse_entered" from="Camera3D/Control/buy_bar/ScrollContainer/HBoxContainer/DDRButton" to="Camera3D/Control/buy_bar/ScrollContainer/HBoxContainer/DDRButton" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Camera3D/Control/buy_bar/ScrollContainer/HBoxContainer/DDRButton" to="Camera3D/Control/buy_bar/ScrollContainer/HBoxContainer/DDRButton" method="_on_mouse_exited"]
[connection signal="pressed" from="Camera3D/Control/buy_bar/ScrollContainer/HBoxContainer/DDRButton" to="." method="_on_ddr_button_pressed"]
[connection signal="mouse_entered" from="Camera3D/Control/buy_bar/ScrollContainer/HBoxContainer/BasketballButton" to="Camera3D/Control/buy_bar/ScrollContainer/HBoxContainer/BasketballButton" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Camera3D/Control/buy_bar/ScrollContainer/HBoxContainer/BasketballButton" to="Camera3D/Control/buy_bar/ScrollContainer/HBoxContainer/BasketballButton" method="_on_mouse_exited"]
[connection signal="pressed" from="Camera3D/Control/buy_bar/ScrollContainer/HBoxContainer/BasketballButton" to="." method="_on_basketball_button_pressed"]
[connection signal="mouse_entered" from="Camera3D/Control/buy_bar/ScrollContainer/HBoxContainer/PinballButton" to="Camera3D/Control/buy_bar/ScrollContainer/HBoxContainer/PinballButton" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Camera3D/Control/buy_bar/ScrollContainer/HBoxContainer/PinballButton" to="Camera3D/Control/buy_bar/ScrollContainer/HBoxContainer/PinballButton" method="_on_mouse_exited"]
[connection signal="pressed" from="Camera3D/Control/buy_bar/ScrollContainer/HBoxContainer/PinballButton" to="." method="_on_pinball_button_pressed"]
[connection signal="mouse_entered" from="Camera3D/Control/buy_bar/ScrollContainer/HBoxContainer/VendingMachineButton" to="Camera3D/Control/buy_bar/ScrollContainer/HBoxContainer/VendingMachineButton" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Camera3D/Control/buy_bar/ScrollContainer/HBoxContainer/VendingMachineButton" to="Camera3D/Control/buy_bar/ScrollContainer/HBoxContainer/VendingMachineButton" method="_on_mouse_exited"]
[connection signal="pressed" from="Camera3D/Control/buy_bar/ScrollContainer/HBoxContainer/VendingMachineButton" to="." method="_on_vending_machine_button_pressed"]
[connection signal="payUp" from="Camera3D/Control/HBoxContainer4/timer" to="." method="_on_timer_pay_up"]
[connection signal="timeout" from="MobTimer" to="." method="_on_mob_timer_timeout"]
